Fix 'jump' for nested items in list Part: 2

--- a/packages/block-library/src/list/editor.scss
+++ b/packages/block-library/src/list/editor.scss
@@ -5,6 +5,5 @@
 	margin-left: 1.3em;
 	li {
 		margin-bottom: 0;
-		line-height: 2;
 	}
 }
